Fix broken style transitions

--- a/_src/scss/_buttons.scss
+++ b/_src/scss/_buttons.scss
@@ -7,7 +7,7 @@
   background-color: $highlight;
   border-radius: 5px;
   border-bottom: 0;
-  transition: background-color 0.25s ease-in-out;
+  transition: background-color 0.25s ease-in-out !important;
   cursor: pointer;
 
   .label {
