--- a/_src/scss/_projects.scss
+++ b/_src/scss/_projects.scss
@@ -32,7 +32,7 @@
 .project-link {
   display: block;
   border-bottom: 0;
-  transition: transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+  transition: transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out !important;
   border-radius: 5px;
   will-change: transform, box-shadow;
 
